--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-safe-area-context": "^4.5.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
